# pairgen

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pairgen/: cli.py  core.py  utils.py
tests/: test_cli.py  test_core.py  test_utils.py
